feat: stage 2
